--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
-    <header>
+    <header class="bg-light">
         <nav class="navber">
-            <div class="brand">
-                <h1>G3 Architects</h1>
+            <div class="brand display-flex">
+                <div>
+                    <h1 class="brands">G3 Architects</h1>
+                </div>
+                <ul class="nav-links display-flex">
+                    <li class="nav-item text-gray"><a href="" class="nav-link text-gray"></a>Home</li>
+                    <li class="nav-item text-gray"><a href="" class="nav-link "></a>About</li>
+                    <li class="nav-item text-gray"><a href="" class="nav-link "></a>conte us</li>
+                    <li class="nav-item text-gray"><a href="" class="nav-link "></a>Login</li>
+                </ul>
             </div>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">
+                    Brand New
+                    Group of Architects
+                </h1>
+                <p class="banner-dispration">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-parmary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
 
@@ -21,4 +42,5 @@
 
     </footer>
 </body>
+
 </html>
