--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@
         </div>
     </header>
     <main>
-
+        <section class="teams display-flex">
+            <div class="team-img-contents">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h1 class="features-title">Quick list of Our Features</h1>
+                <p class="features-dispration">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-parmary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
