--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     Brand New
                     Group of Architects
                 </h1>
-                <p class="banner-dispration">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="banner-dispration">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-parmary">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
@@ -45,8 +47,45 @@
             </div>
             <div class="our-features">
                 <h1 class="features-title">Quick list of Our Features</h1>
-                <p class="features-dispration">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="features-dispration">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-parmary">Explore More</button>
+            </div>
+        </section>
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h3 class="fact-number">54</h3>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                   <div>
+                    <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h3 class="fact-number">1458</h3>
+                    <h5 class="fact-name">Project Finished</h5>
+                   </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h3 class="fact-number">590</h3>
+                    <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                   <div>
+                    <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h3 class="fact-number">22578</h3>
+                    <h5 class="fact-name">Email Send</h5>
+                   </div>
+                </div>
             </div>
         </section>
     </main>
