--- a/from.html
+++ b/from.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        label{
+            display: block;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
     <form>
@@ -13,6 +19,9 @@
         </label>
         <label for="email">Your Email
             <input type="email" name="" id="email" placeholder="Enter Your Email">
+        </label>
+        <label for="password">Your Email
+            <input type="password" name="" id="password" placeholder="Enter Your password">
         </label>
 
     </form>
