--- a/from.html
+++ b/from.html
@@ -24,6 +24,16 @@
             <input type="password" name="" id="password" placeholder="Enter Your password">
         </label>
 
+        <fieldset>
+            <legend>One pitha</legend>
+            <label for="chitoy">
+                <input type="radio" name="pitha" id="chitoy">chitoy
+            </label>
+            <label for="vapha">
+                <input type="radio" name="pitha" id="vapha">vapha
+            </label>
+        </fieldset>
+
     </form>
 </body>
 </html>
